<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rank_protect_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4">
    <LinearLayout
        android:id="@+id/rank_protect_content_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="224dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rank_protect_monitor_card"
            style="@style/rank_protect_card_layout_style"
            android:visibility="visible">

            <ImageView
                android:id="@+id/rank_protect_monitor_card_icon"
                style="@style/rank_protect_card_icon_style"
                android:src="@drawable/rank_protect_monitor_card_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/rank_protect_monitor_card_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rank_protect_monitor_card_text1"
                    style="@style/rank_protect_card_text1"
                    android:text="@string/cn_rank_protect_monitor_card_text1" />

                    <TextView
                        android:id="@+id/rank_protect_monitor_card_text3"
                        style="@style/rank_protect_card_text2"
                        android:layout_marginTop="2dp"
                        android:text="@string/cn_rank_protect_monitor_card_text3" />
                </LinearLayout>

                <TextView
                    android:id="@+id/level_protect_monitor_card_switch"
                    style="@style/rank_protect_card_btn_normal"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/level_monitor_card_switch_ok"
                    style="@style/rank_protect_card_btn_ok"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/level_monitor_card_switch_not_ok"
                    style="@style/rank_protect_card_btn_not_ok"
                    android:visibility="visible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="#e7e7e7" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rank_protect_antiharass_card"
                style="@style/rank_protect_card_layout_style"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/rank_protect_antiharass_card_icon"
                    style="@style/rank_protect_card_icon_style"
                    android:src="@drawable/rank_protect_antiharass_card_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/rank_protect_antiharass_card_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rank_protect_antiharass_card_text1"
                        style="@style/rank_protect_card_text1"
                        android:text="@string/cn_rank_protect_antiharass_card_text1" />

                    <TextView
                        android:id="@+id/rank_protect_antiharass_card_text2"
                        style="@style/rank_protect_card_text2"
                        android:layout_marginTop="2dp"
                        android:text="@string/cn_rank_protect_antiharass_card_text2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/rank_protect_antiharass_card_switch"
                    style="@style/rank_protect_card_btn_normal"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/levle_antiharass_card_switch_ok"
                    style="@style/rank_protect_card_btn_ok"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/levle_antiharass_card_switch_not_ok"
                    style="@style/rank_protect_card_btn_not_ok"
                    android:visibility="visible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="#e7e7e7" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rank_protect_applock_card"
                style="@style/rank_protect_card_layout_style"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/rank_protect_applock_card_icon"
                    style="@style/rank_protect_card_icon_style"
                    android:src="@drawable/rank_protect_applock_card_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/rank_protect_applock_card_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rank_protect_applock_card_text1"
                        style="@style/rank_protect_card_text1"
                        android:text="@string/cn_rank_protect_applock_card_text1" />

                    <TextView
                    android:id="@+id/rank_protect_applock_card_text2"
                    style="@style/rank_protect_card_text2"
                    android:layout_marginTop="2dp"
                    android:text="@string/cn_rank_protect_applock_card_text2" />
            </LinearLayout>

            <TextView
                android:id="@+id/level_applock_card_switch"
                style="@style/rank_protect_card_btn_normal"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/level_applock_card_switch_ok"
                style="@style/rank_protect_card_btn_ok"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/level_applock_card_switch_not_ok"
                style="@style/rank_protect_card_btn_not_ok"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="#e7e7e7" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/rank_protect_main_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/cn_rank_protect_one_key_btn_bg"
        android:gravity="center"
        android:text="@string/cn_rank_protect_bit_btn_one_key_open"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="visible" />


    <RelativeLayout
        android:id="@+id/rank_protect_main_title_layout"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:background="@color/notification_background_color_blue">

    </RelativeLayout>

    <TextView
        android:id="@+id/levle_protect_back"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/navigtion_title_btn_bg"
        android:drawableLeft="@drawable/redpacket_back_icon"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/cn_rank_protect_title"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/level_text_layout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:background="@color/notification_background_color_blue">

        <TextView
            android:id="@+id/permission_level_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="@string/cn_rank_protect_main_title_high" />

        <TextView
            android:id="@+id/rank_protect_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/permission_level_main_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="visible"
            tools:text="建议开启全部权限提升防护等级" />

    </RelativeLayout>

</RelativeLayout>

