<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/redpacket_top"
        layout="@layout/normal_title"/>
    <RelativeLayout
        android:id="@+id/redpacket_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/redpacket_top"
        android:layout_height="130dp"
        android:gravity="center_horizontal"
        android:background="@color/safepay_default_bg">
        <TextView
            android:id="@+id/record_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_marginBottom="52dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="3dp"
            android:text="0"/>
        <TextView
            android:layout_toRightOf="@id/record_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:text="个红包已提醒"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/permission_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/redpacket_layout"
        android:layout_height="25dp"
        android:background="@color/safepay_default_bg">
        <TextView
            android:id="@+id/redpacket_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginRight="10dp"
            android:padding="3dp"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:text="@string/redpacket_permission_recovery"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/switch_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/permission_layout"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/weixin_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/weixin_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/weixin_icon"
                android:textColor="#2c2c2c"
                android:text="@string/weixin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/weixin_icon"
                android:textColor="#515151"
                android:text="@string/repacket_notify_count"/>
            <ImageView
                android:id="@+id/weixin_switch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dp"
                android:src="@drawable/switch_close"/>
        </RelativeLayout>
        <View
            android:layout_width="300dp"
            android:layout_height="1px"
            android:layout_gravity="center_horizontal"
            android:background="#dbdbdb"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/qq_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/qq_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/qq_icon"
                android:textColor="#2c2c2c"
                android:text="@string/weixin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/qq_icon"
                android:textColor="#515151"
                android:text="@string/repacket_notify_count"/>
            <ImageView
                android:id="@+id/qq_switch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dp"
                android:src="@drawable/switch_open"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#8a8a8a"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/auto_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/redpacket_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@id/auto_icon"
                android:textColor="#f00"
                android:text="@string/repacket_autoopen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/auto_icon"
                android:textColor="#515151"
                android:text="@string/repacket_autoopen_notice"/>
            <ImageView
                android:id="@+id/auto_switch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dp"
                android:src="@drawable/switch_open"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
